--- a/style.css
+++ b/style.css
@@ -4,13 +4,27 @@
     box-sizing: border-box;
   }
   
-  .menu-container {
+  .menu-container{
     color: #fff;
     background-color: #5995DA;  /* Blue */
     padding: 20px 0;
+    display: flex;
+    justify-content: flex-end;
   }
   
-  .menu {
+  .menu{
     border: 1px solid #fff;  /* For debugging */
     width: 900px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .links{
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .login{
+    margin-left: 20px;
   }
